# reacher

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  RELEASING.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  main.yml
debian/: changelog  control  copyright  install  rules
docs/: setup-guide.md
firmware/: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  compile.sh
firmware/fr/: Config.h  fr.ino
firmware/fr_lite/: Config.h  fr_lite.ino
firmware/libraries/REACHERDevices/: library.properties
firmware/libraries/REACHERDevices/src/: Action.h  Commands.h  Cue.cpp  Device.cpp  Device.h  Laser.cpp  Laser.h  Microscope.cpp  Microscope.h  Pins.h  Pump.cpp  ReacherHelpers.cpp  ReacherHelpers.h  Scheduler.cpp  Scheduler.h  Slm.cpp  Slm.h  SwitchLever.cpp  SwitchLever.h  Trigger.h
firmware/omission/: Config.h  omission.ino
firmware/pavlovian/: PavlovianScheduler.cpp  PavlovianScheduler.h  pavlovian.ino
firmware/pr/: Config.h  pr.ino
firmware/vi/: Config.h  vi.ino
scripts/: bump-version.py  install.sh
src/reacher/: __init__.py  __main__.py  device_id.py  discovery.py  machines.py  monitor.py  pairing.py  pin_overrides.py  session_manager.py
src/reacher/api/: app.py
src/reacher/api/middleware/: auth.py
src/reacher/api/routers/: data.py  discovery.py  file.py  firmware.py  hardware.py  lifecycle.py  pairing.py  program.py  proxy.py  serial.py  session.py  update.py  validate.py  validation_rules.py  validators.py  websocket.py
src/reacher/assets/: reacher-app-icon.icns
src/reacher/core/: reacher.py
src/reacher/hex/: fr.hex  omission.hex  pavlovian.hex  pr.hex  vi.hex
src/reacher/hex/mega/: fr.hex  omission.hex  pavlovian.hex  pr.hex  vi.hex
src/reacher/hex/uno/: fr.hex  fr_lite.hex  omission.hex  pavlovian.hex  pr.hex  vi.hex
src/reacher/interface/: __init__.py  dashboard.py  hardware_tab.py  home_tab.py  interface.py  monitor_tab.py  program_tab.py  schedule_tab.py
src/reacher/kernel/: __init__.py  commands.py  reacher.py  simulator.py
src/reacher/remote/: dashboard.py  hardware_tab.py  home_tab.py  interface.py  monitor_tab.py  schedule_tab.py
src/reacher/uploader/: __init__.py  boards.py  uploader.py
src/reacher/wired_controls/: dashboard.py  hardware_tab.py  home_tab.py  interface.py  monitor_tab.py  program_tab.py  schedule_tab.py
src/reacher/wireless_controls/: __init__.py  dashboard.py  program_tab.py
systemd/: reacher-monitor@.service  reacher@.service
tests/: test_api.py  test_command_parity.py  test_commands.py  test_lifecycle.py  test_multimachine.py  test_pin_overrides.py  test_session_manager.py  test_validate.py  test_validation_rules.py  test_websocket.py
tests/core/: test_reacher.py
tests/wired_controls/: test_dashboard.py  test_hardware_tab.py  test_home_tab.py  test_interface.py  test_monitor_tab.py  test_program_tab.py  test_schedule_tab.py
